Adjust spacing issues

--- a/_assets/css/components/navigation.scss
+++ b/_assets/css/components/navigation.scss
@@ -9,6 +9,7 @@
   );
   border-bottom: solid 1px $color-primary;
   margin: 0 0 calc(#{$font-size-base});
+  padding: 0.2em 0;
 
   .wrap {
     display: flex;
@@ -19,7 +20,7 @@
 
 .navigation__section {
   margin: 0;
-  padding: 0.2em 0;
+  padding: 0;
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
@@ -33,7 +34,7 @@
   a:link,
   a:visited {
     display: inline-block;
-    margin: 0 0.5em 0 0;
+    margin: 0 0.3em 0 0;
     padding: 0.1em 0.5em;
     color: #fff;
     text-decoration: none;
